# BeeHaive

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MISSIE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.claude/: schrijfstijl-bb.md  worklog.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: building_blocks.py  guardrails.py  items.py  rag.py
backend/app/config/: __init__.py
backend/app/graph/: connection.py  mutations.py  queries.py  schema.py  seed.py
backend/app/ingestion/: __init__.py  blocked_authors.txt.example  fetcher.py  gemini_client.py  llm.py  pii.py  pipeline.py  summarizer.py
backend/app/models/: ingestion.py  schemas.py
backend/app/rag/: auth.py  config.py  engine.py
backend/scripts/: calibrate_mapper.py  ingest_item.py  seed_graph.py
backend/tests/: conftest.py  test_dedup.py  test_fetcher.py  test_llm.py  test_pii.py  test_pipeline.py  test_queries.py  test_summarizer.py
code-review/: project-conventions.md
code-review/output/: review-2026-03-04-58ef9a-r2.md  review-2026-03-04-58ef9a.md  review-2026-03-04-58ef9a.ndjson  review-2026-03-07-f19323-r2.md  review-2026-03-07-f19323-r2.ndjson  review-2026-03-07-f19323.md  review-2026-03-07-f19323.ndjson  review-2026-03-08-7855b8.md  review-2026-03-09-7855b8-r2.md  (+8 more)
docs/: CROSS_PROJECT_MAPPING.md  DATA_GLOSSARY.md  RESEARCH_PROTOCOL.md  RESEARCH_PROTOCOL.review.md  course-comparison.md  course-design-sources.md
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
youth-care-booking/: README.md
(+236 files in other folders)
