[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beehaive-backend"
version = "0.1.0"
description = "BeeHaive AI Knowledge Framework - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29",
    "neo4j>=5.18,<6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
markers = ["integration: marks tests as requiring a running Neo4j instance"]
